--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
